--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,6 +30,11 @@
         <a href="#" class="read-on">Read on &rarr;</a>
       </article>
     </script>
+
+    <script id="author-filter-template" type="text/x-handlebars-template">
+
+    </script>
+
     <!--
         STRETCH! Look at all of the duplicated code in our
         populateFilters method! Looks like a good opportunity
