--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,7 +32,16 @@
     </script>
 
     <script id="author-filter-template" type="text/x-handlebars-template">
-
+        <li>
+          <select id="author-filter">
+            <option value="">-- Filter by Authors --</option>
+          </select>
+        </li>
+        <li>
+          <select id="category-filter">
+            <option value="">-- Filter by Categories --</option>
+          </select>
+        </li>
     </script>
 
     <!--
