--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,16 +32,11 @@
     </script>
 
     <script id="author-filter-template" type="text/x-handlebars-template">
-        <li>
-          <select id="author-filter">
-            <option value="">-- Filter by Authors --</option>
-          </select>
-        </li>
-        <li>
-          <select id="category-filter">
-            <option value="">-- Filter by Categories --</option>
-          </select>
-        </li>
+          <option value="{{author}}">{{author}}</option>
+    </script>
+
+    <script id="category-filter-template" type="text/x-handlebars-template">
+          <option value="{{category}}">{{category}}</option>
     </script>
 
     <!--
@@ -76,16 +71,8 @@
       <section id="articles" class="tab-content">
         <div>
           <ul id="filters">
-            <li>
-              <select id="author-filter">
-                <option value="">-- Filter by Authors --</option>
-              </select>
-            </li>
-            <li>
-              <select id="category-filter">
-                <option value="">-- Filter by Categories --</option>
-              </select>
-            </li>
+            <li><select id="author-filter"></select></li>
+            <li><select id="category-filter"></select></li>
           </ul>
         </div>
       </section>
